# mobilemanipulationchallenge2018

./: .rosinstall  README.md  setup.sh
dynamic_introspection/: CMakeLists.txt  package.xml
dynamic_introspection/include/dynamic_introspection/: DynamicIntrospection.h
dynamic_introspection/msg/: IntrospectionMsg.msg  MatrixParameter.msg
dynamic_introspection/src/: DynamicIntrospection.cpp
dynamic_introspection/test/: DynamicIntrospectionBagExample.cpp  DynamicIntrospectionExample.cpp
mob_manip_challenge_2018/: CMakeLists.txt  README.md  package.xml
mob_manip_challenge_2018/launch/: mob_manip_2018_bringup.launch  mob_manip_2018_bringup_all.launch  mob_manip_gazebo.launch  mob_manip_navigation.launch  pick_place_bringup.launch
mob_manip_challenge_2018/scripts/: pick_and_place_server.py  pick_client.py
mob_manip_challenge_2018/src/: library_robot_bringup.py  test_state.py
mob_manip_challenge_2018/worlds/: book_world (copy).world  book_world.world  book_world1.world
mob_manip_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
mob_manip_gui/resource/: MyPlugin.ui
mob_manip_gui/scripts/: mob_manip_gui
pal_gazebo_plugins/: CHANGELOG.rst  package.xml
pal_gazebo_plugins/src/: gazebo_attachment.cpp
pal_hardware_gazebo/src/: pal_hardware_gazebo.cpp
project_plan_doc/: navigation_manipulation_challenge_plan.odp
ros_controllers/diff_drive_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_controllers/effort_controllers/: CHANGELOG.rst  package.xml
ros_controllers/force_torque_sensor_controller/: CHANGELOG.rst  package.xml
ros_controllers/forward_command_controller/: CHANGELOG.rst  package.xml
ros_controllers/four_wheel_steering_controller/: CHANGELOG.rst  package.xml
ros_controllers/gripper_action_controller/: CHANGELOG.rst  package.xml
ros_controllers/imu_sensor_controller/: CHANGELOG.rst  package.xml
ros_controllers/joint_state_controller/: CHANGELOG.rst  package.xml
ros_controllers/joint_torque_sensor_state_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_controllers/joint_trajectory_controller/: CHANGELOG.rst  package.xml
ros_controllers/mode_state_controller/: CHANGELOG.rst  package.xml
(+40 files in other folders)
